DREM-1925 [実装]([DREM-61]ワーディング適用)エラーポリシー更新・ネットワークエラー
　検索レコメンドサーバーのアクセス時に、個々のクライアントメソッドから呼び出せる"getError"メソッドを追加しました。パース後のデータがヌルだった場合に呼び出すと、エラー種別・HTTPステータスコードやAPIの固有のエラーコード、該当するエラーメッセージが取得できます。また、これまで取得できたのがエラー種別のみだったぷららサーバーの"getError"メソッドにも、エラーコードとエラーメッセージの処理を追加しました。なお、これまでのぷららサーバー用の処理はエラー種別が決定する前の仮の値で作成されており、今回正式なエラー種別となりました。

Change-Id: I09b9cbefb6beb05d3e6f3782e2b0af60fa0b47b8

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -348,4 +348,10 @@
     <string name="application_info_application_provider">提供者</string>
     <string name="application_info_application_version">バージョン</string>
     <string name="application_info_application_provider_value">株式会社NTTドコモ</string>
+
+    <!-- TODO: ネットワークエラー（仮）ワーディングが確定するまでの文言 -->
+    <!-- メッセージ自体は細分化せず、2種類に留める予定 -->
+    <string name="nw_error_message">通信時に問題が発生しました</string>
+    <string name="nw_error_ssl_message">SSL証明書に問題が発生しました</string>
+
 </resources>
