--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -212,7 +212,7 @@
     <string name="nav_menu_item_premium_tv_app_start_common">テレビアプリを起動する</string>
 
     <!-- 検索画面 -->
-    <string name="search_loading">loading&#8230;</string>
+    <string name="search_loading">読み込み中...</string>
 
     <!-- レンタル -->
     <string name="rental_title">レンタルビデオ</string>
