ホーム画面の項目名の修正　クリップ（テレビ）＝＞クリップ（番組）
Change-Id: I8f5f285b96f36644e8d5da4a2545ca48a361bf05

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -193,7 +193,7 @@
     <string name="nav_menu_item_staff_recommend">スタッフおすすめ</string>
     <string name="nav_menu_item_ranking">ランキング</string>
     <string name="nav_menu_item_clip">クリップ</string>
-    <string name="nav_menu_item_tv_clip">クリップ（テレビ）</string>
+    <string name="nav_menu_item_tv_clip">クリップ（番組）</string>
     <string name="nav_menu_item_vod_clip">クリップ（ビデオ）</string>
     <string name="nav_menu_item_purchased_video">購入済みビデオ</string>
     <string name="nav_menu_item_watch_listen_video">視聴中ビデオ</string>
