DREM-1980 [実装]([DREM-61]ワーディング適用)ネットワークエラー・アクティビティ側の表示対応実装・コンテンツリスト系
ワーディングリストの対応漏れに対応しました。その際、宅外時のサムネイルアイコン用テキスト表示の処理追加と、録画予約ダイアログの処理の誤り修正も行いました。

Change-Id: I8348ffc4fd0d163456083ee1e9d544d29e7eaa48

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -227,16 +227,17 @@
     <string name="contents_detail_until_date">まで</string>
     <string name="contents_detail_contract_text">ひかりTV for docomoの契約が必要です。契約済みの方はdアカウントでログインしてください。</string>
     <string name="dtv_content_service_start_text">dTVで視聴</string>
-    <string name="dtv_content_service_start_dialog">dTVアプリを起動します</string>
+    <string name="dtv_content_service_start_dialog">dTVを起動します。</string>
     <string name="dtv_content_service_update_dialog">dTVアプリのアップデートが必要です</string>
     <string name="d_anime_store_content_service_start_text">dアニメストアで視聴</string>
-    <string name="d_anime_store_content_service_start_dialog">dアニメストアアプリを起動します</string>
+    <string name="d_anime_store_content_service_start_dialog">dアニメストアを起動します。</string>
     <string name="d_anime_store_content_service_update_dialog">dアニメストアアプリのアップデートが必要です</string>
     <string name="dtv_channel_service_start_text">dTVチャンネルで視聴</string>
-    <string name="dtv_channel_service_start_dialog">dtvチャンネルアプリを起動します</string>
+    <string name="dtv_channel_service_start_dialog">dTVチャンネルを起動します。</string>
     <string name="dtv_channel_service_update_dialog">ｄTVチャンネルアプリのアップデートが必要です</string>
     <string name="d_tv_terminal_application_version_update_dialog">ドコモテレビターミナルアプリのアップデートが必要です</string>
     <string name="stb_application_version_update">ご利用のドコモテレビターミナルでアプリのアップデートが必要です。\nドコモテレビターミナルを起動し、設定＞ドコモサービス設定＞ドコモアプリ管理　から「ドコモテレビターミナルアプリ用アプリ」をアップデートしてください。</string>
+    <string name="contents_detail_thumbnail_text_no_pair">ドコモテレビターミナルに接続してください</string>
     <string name="contents_detail_thumbnail_text">テレビで視聴できます</string>
     <string name="contents_detail_contract_leading_button">契約する</string>
     <string name="contents_detail_tab_program_detail">番組詳細</string>
@@ -263,13 +264,14 @@
     <string name="recording_reservation_failed_dialog_param">リクエストパラメータ不正</string>
     <string name="recording_reservation_failed_dialog_over">登録件数が上限に達したため録画予約に失敗しました</string>
     <string name="recording_reservation_failed_dialog_no_agreement">未契約エラー</string>
-    <string name="recording_reservation_confirm_dialog_msg">録画予約しますか？</string>
+    <string name="recording_reservation_confirm_dialog_title">録画予約しますか？</string>
+    <string name="recording_reservation_confirm_dialog_msg">録画予約依頼を行います。録画予約が受け付けられるまで、時間がかかる場合がありますのでご注意ください。</string>
     <string name="recording_reservation_confirm_dialog_confirm">録画予約する</string>
     <string name="recording_reservation_confirm_dialog_cancel">キャンセル</string>
     <string name="contents_detail_contract_text_vod">ご覧になるには購入が必要です。\nドコモテレビターミナルで購入してください。</string>
     <string name="contents_detail_contract_button_vod">ドコモテレビターミナルで購入する</string>
-    <string name="contents_detail_contract_text_ch">このチャンネルをご覧になるにはドコモテレビターミナルでの契約が必要です</string>
-    <string name="contents_detail_contract_button_ch">ドコモテレビターミナルで契約する</string>
+    <string name="contents_detail_contract_text_ch">このチャンネルをご覧になるには\nSTB側での契約が必要です。</string>
+    <string name="contents_detail_contract_button_ch">STBで契約する</string>
     <string name="contents_detail_external_display_dialog_msg">外部出力が検出されたので、再生を停止しました</string>
     <string name="contents_detail_parental_check_fail">年齢制限のため視聴できません</string>
     <string name="contents_detail_response_ok">OK</string>
