--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -59,7 +59,6 @@
     <string name="str_stb_select_result_text">ペアリング可能なドコモテレビターミナルが\n見つかりました</string>
     <string name="str_stb_select_result_text_failed">ペアリング可能なドコモテレビターミナルが\n見つかりませんでした</string>
     <string name="str_stb_select_result_text_search">ペアリング可能なドコモテレビターミナルを\n探しています</string>
-    <string name="str_stb_search_failed_help">ドコモテレビターミナルとペアリングするには</string>
     <string name="str_stb_search_failed_paring_again">再度ペアリングを実行する</string>
     <string name="str_stb_not_registration_account_message">ドコモテレビターミナルに\ndアカウントが登録されていません</string>
     <string name="str_stb_login_other_account">別のdアカウントでログインする</string>
@@ -68,7 +67,7 @@
     <string name="str_stb_again_pairing">再度ペアリングを実行する</string>
 
     <string name="str_stb_pairing">ドコモテレビターミナルとペアリング中です</string>
-    <string name="str_stb_stb_error">STBの処理に失敗しました</string>
+    <string name="str_stb_stb_error">dアカウントの処理に失敗しました</string>
 
     <!-- リモコン-->
     <string name="remote_controller_viewpager_watch_by_tv">テレビで視聴する</string>
@@ -282,7 +281,7 @@
 
     <!-- ペアリング設定画面 -->
     <string name="paring_setting_search_failed_text">ペアリング可能なデバイスが見つかりませんでした</string>
-    <string name="paring_setting_search_help_text">STBとペアリングするには</string>
+    <string name="paring_setting_search_help_text">ドコモテレビターミナルとペアリングするには</string>
     <string name="paring_setting_select_text">ペアリングするドコモテレビターミナルを選択</string>
 
     <!-- 設定画面 -->
