https://agile.apccloud.jp/jira/browse/DREM-2036
[実装](ジャンルの参照パラメータを変更)実装
ビデオジャンル実装・コード整理
発見した不具合修正
ログを整理

Change-Id: Iae261353e6da85fadb1d4083b68a9c80223803fd

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -157,6 +157,7 @@
     <string name="video_list_genre_all">すべて</string>
     <string name="video_list_genre_all_contents">すべての作品</string>
     <string name="video_list_genre_nod">NHKオンデマンド</string>
+    <string name="video_list_genre_dtv">dTV</string>
 
     <!-- Search -->
     <string name="keyword_search_title">キーワード検索</string>
