https://agile.apccloud.jp/jira/browse/DREM-1777
ジャンルの参照パラメータを変更
コメントアウトの修正
QA事項の反映

Change-Id: Ib0fd42bb3c43fcb53f177dd332623bccb946bdfd

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -153,7 +153,7 @@
     <string name="activation_failed_error">アクティベーション出来ませんでした。</string>
 
     <!-- ビデオ一覧 -->
-    <string name="video_content_top_title">ビデオ</string>
+    <string name="video_content_top_title">ビデオジャンル</string>
     <string name="video_list_genre_all">すべて</string>
     <string name="video_list_genre_all_contents">すべての作品</string>
     <string name="video_list_genre_nod">NHKオンデマンド</string>
