--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -303,7 +303,7 @@
     <string name="main_setting_hikari_tv_update_message">ドコモテレビターミナルのひかりTV for docomoアプリのバージョンアップが必要です</string>
     <string name="main_setting_dazn_update_message">ドコモテレビターミナルのダ・ゾーンのバージョンアップが必要です。</string>
     <string name="main_setting_connect_error_message">ドコモテレビターミナルとの通信に失敗しました</string>
-    <string name="main_setting_stb_busy_error_message">ドコモテレビターミナルが処理中です。</string>
+    <string name="main_setting_stb_busy_error_message">ドコモテレビターミナルが処理中です</string>
     <string name="main_setting_menu_title_faq_list">FAQ</string>
     <string name="main_setting_menu_title_license">ライセンス情報</string>
     <string name="main_setting_menu_title_privacy_policy">プライバシーポリシー</string>
