DREM-2015 [結合]([DREM-61]ワーディング適用)不具合修正
・クリップ操作のメッセージが単純化したので、修正を行いました。
・キーワード検索画面でネットワークエラーが発生した場合、取得中を示すプログレスバーが回り続けていたので、この場合は非表示にするように変更しました。

Change-Id: I0d78bfbf9f29fe05095685c60b91446cf8a5177b

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -11,10 +11,10 @@
     <string name="negative_response">いいえ</string>
     <string name="custom_dialog_ok">OK</string>
     <string name="custom_dialog_cancel">キャンセル</string>
-    <string name="clip_regist_result_message">をクリップしました</string>
-    <string name="clip_regist_error_message">のクリップに失敗しました</string>
-    <string name="clip_delete_result_message">のクリップを解除しました</string>
-    <string name="clip_delete_error_message">のクリップの解除に失敗しました</string>
+    <string name="clip_regist_result_message">クリップしました</string>
+    <string name="clip_regist_error_message">クリップに失敗しました</string>
+    <string name="clip_delete_result_message">クリップを解除しました</string>
+    <string name="clip_delete_error_message">クリップの解除に失敗しました</string>
     <string name="clip_data_get_error_message">クリップデータ取得失敗</string>
     <string name="epg_contents_message">番組</string>
     <string name="vod_contents_message">ビデオ</string>
