DREM-1658 コンテンツ詳細(ひかりTV/詳細情報)
Change-Id: I232f5e4c66f7a61cbeacaa5cc521758f84db653f

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -278,6 +278,7 @@
     <string name="contents_detail_parental_check_fail">年齢制限のため視聴できません</string>
     <string name="contents_detail_response_ok">OK</string>
     <string name="contents_player_bad_contents_info">再生できませんでした</string>
+    <string name="contents_detail_adinfo_array_pipe">"\\|"</string>
 
     <!-- チャンネルリストタイトル -->
     <string name="channel_list_activity_title">チャンネルリスト</string>
