DREM-1866 ルート化チェック機能
アプリ起動時とBG→FG時にRoot化チェックを挿入

Change-Id: I0bbaca5d55056b07940aaf19412775be94b51cfc

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="status_bar_height_defpackage">android</string>
     <string name="common_empty_data_message">コンテンツがありません</string>
     <string name="common_get_data_failed_message">取得に失敗しました</string>
+    <string name="common_root_device_detection_message">Rootデバイスを検知したためアプリを終了します</string>
 
     <!-- Launch -->
     <string name="str_app_title">ドコモテレビターミナル</string>
