DREM-2081 [実装](設定ファイルをサーバから取得)設定ファイルと読み込み処理
アプリ起動時、バックグラウンドからフォアグラウンドへの復帰時、リモート視聴時のそれぞれに、設定ファイルによるアプリ実行停止とアップデートを追加。
なお、ダイアログはいひとまず通常の物で実装を行った。キュー付きへの置き換えはこれからとなる。

Change-Id: Ie4799acc5acd1d7aeadea7fda080cd73ea16fea3

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -356,4 +356,10 @@
     <string name="nw_error_message">通信時に問題が発生しました</string>
     <string name="nw_error_ssl_message">SSL証明書に問題が発生しました</string>
 
+    <!-- TODO: 設定ファイル動作制御用仮ワーディング -->
+    <string name="setting_file_force_download">新しいバージョンのアプリがリリースされたので、ダウンロードを行います</string>
+    <string name="setting_file_download">新しいバージョンのアプリがリリースされました。ダウンロードを行いますか？</string>
+    <string name="setting_file_stop_apli">アプリの動作が行えませんでした</string>
+
+
 </resources>
