[DREM-40]チュートリアル表示 コンフリクト解消し再コミット
Change-Id: I3d12f5bdc43d936a1f4b0c5a1b66ce782d441da9

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -361,5 +361,8 @@
     <string name="setting_file_download">新しいバージョンのアプリがリリースされました。ダウンロードを行いますか？</string>
     <string name="setting_file_stop_apli">アプリの動作が行えませんでした</string>
 
+    <!-- チュートリアル -->
+    <string name="tutorial_show_agreement">規約を表示</string>
+    <string name="tutorial_agreement_button">規約に同意して利用を開始</string>
 
 </resources>
