--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -42,8 +42,9 @@
     <string name="common_empty_data_message">コンテンツがありません</string>
     <string name="common_get_data_failed_message">取得に失敗しました</string>
     <string name="common_root_device_detection_message">Rootデバイスを検知したためアプリを終了します</string>
-    <string name="common_from">から</string>
     <string name="common_until">まで</string>
+    <string name="common_date_format_start_str">" から"</string>
+    <string name="common_date_format_end_str">" まで"</string>
 
     <!-- Launch -->
     <string name="str_app_title">ドコモテレビターミナル</string>
@@ -227,6 +228,7 @@
     <string name="contents_info_thumbnail_button">コンテンツ詳細のサムネイル画像上のボタン</string>
     <string name="contents_detail_tv_staff">キャスト・スタッフ</string>
     <string name="contents_detail_tv_staff_recommend">おすすめ作品</string>
+    <string name="contents_detail_until_date">まで</string>
     <string name="contents_detail_hikari_d_channel_miss_viewing">見逃し</string>
     <string name="contents_detail_hikari_d_channel_miss_viewing_separation">"見逃し | "</string>
     <string name="contents_detail_contract_text">ひかりTV for docomoの契約が必要です。契約済みの方はdアカウントでログインしてください。</string>
@@ -311,7 +313,7 @@
     <string name="main_setting_connect_error_message">ドコモテレビターミナルとの通信に失敗しました</string>
     <string name="main_setting_stb_busy_error_message">ドコモテレビターミナルが処理中です</string>
     <string name="main_setting_logon_request_error_message">ログインしてください</string>
-    <string name="main_setting_h4d_not_signed_message">ひかりTV for docomoの契約情報が確認できないため\nご利用になれません</string>
+    <string name="main_setting_h4d_not_signed_message">ひかりTV for docomoの契約状態が確認できないため\nご利用になれません。</string>
     <string name="main_setting_menu_title_faq_list">FAQ</string>
     <string name="main_setting_menu_title_license">ライセンス情報</string>
     <string name="main_setting_menu_title_privacy_policy">プライバシーポリシー</string>
