DREM-1318 [DREM-10-12]コンテンツ詳細(ひかりTV/コンテンツ契約)
コンテンツ詳細表示出し分け用Utilクラス作成、コンテンツリストに見逃しコンテンツ表示不具合修正、エポック秒変換処理リファクタ

Change-Id: I429873fbf7efded6caf4b5cac5b5773d2267b514

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -284,6 +284,7 @@
     <string name="contents_player_bad_contents_info">再生できませんでした</string>
     <string name="contents_detail_adinfo_array_pipe">"\\|"</string>
     <string name="contents_detail_date_left_">"\\|"</string>
+    <string name="contents_detail_pairing_request">ドコモテレビターミナルとのペアリングが必要です</string>
 
     <!-- チャンネルリストタイトル -->
     <string name="channel_list_activity_title">チャンネルリスト</string>
