DREM-1318 [DREM-10-12]コンテンツ詳細(ひかりTV/コンテンツ契約)
ひかりNow On Air 自動再生、コンテンツ種別ごとの出し分け、時間表示に秒があったため修正

Change-Id: Ic250fafaa8a505a7a8ace7aaf0cea2790408bc4c

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -285,6 +285,7 @@
     <string name="contents_detail_adinfo_array_pipe">"\\|"</string>
     <string name="contents_detail_date_left_">"\\|"</string>
     <string name="contents_detail_pairing_request">ドコモテレビターミナルとのペアリングが必要です</string>
+    <string name="contents_detail_login_button">ログイン</string>
 
     <!-- チャンネルリストタイトル -->
     <string name="channel_list_activity_title">チャンネルリスト</string>
