アクティベーション処理の共通化
Change-Id: I7ba787f621718f068e5a325d30c6e4fa6b6b2268

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -153,8 +153,9 @@
     <string name="record_download_cancel_title">ダウンロードを取りやめますか？</string>
     <string name="record_download_cancel_confirm">取りやめる</string>
     <string name="record_download_notification">録画番組をダウンロード中</string>
-    <string name="activation_confirm_dialog_title">アクティベーション実行の確認</string>
-    <string name="activation_failed_error">アクティベーション出来ませんでした。</string>
+    <string name="activation_file_path_create_file_msg">アクティベーションファイルパス作成失敗しました。</string>
+    <string name="activation_success_msg">アクティベーション成功しました。</string>
+    <string name="activation_failed_msg">アクティベーション失敗しました。</string>
 
     <!-- ビデオ一覧 -->
     <string name="video_content_top_title">ビデオジャンル</string>
