--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -155,8 +155,8 @@
     <string name="record_download_cancel_confirm">取りやめる</string>
     <string name="record_download_notification">録画番組をダウンロード中</string>
     <string name="activation_file_path_create_file_msg">アクティベーションファイルパス作成失敗しました。</string>
-    <string name="activation_success_msg">アクティベーション成功しました。</string>
     <string name="activation_failed_msg">アクティベーション失敗しました。</string>
+    <string name="dtcp_init_failed_msg">dtcp init 失敗しました。</string>
 
     <!-- ビデオ一覧 -->
     <string name="video_content_top_title">ビデオジャンル</string>
