DREM-2423 [その他](その他)[DREM-10-12]コンテンツ詳細(ひかりTV/コンテンツ契約)　バグ対応
結合試験結果反映(ユーザ状態、コンテンツタイプに応じたメッセージ出し分)

Change-Id: I8504ce37cb8ec3899969ae5d42711914e3a26eb4

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -256,7 +256,6 @@
     <string name="contents_detail_tab_channel">チャンネル</string>
     <string name="contents_detail_tab_episode">エピソード</string>
     <string name="contents_detail_tab_contents_info">作品情報</string>
-    <string name="contents_detail_hikari_tv_agreement">このチャンネルをご覧になるには\nドコモテレビターミナルでの契約が必要です</string>
     <string name="contents_detail_hikari_vod_inside_home">本コンテンツはテレビで視聴できます</string>
     <string name="contents_detail_hikari_vod_agreement">ご覧になるにはコンテンツの契約が必要です。\nドコモテレビターミナルで契約してください</string>
     <string name="contents_detail_no_agreement">視聴いただくには契約が必要です</string>
@@ -298,6 +297,7 @@
     <string name="contents_detail_login_button">ログイン</string>
     <string name="contents_detail_now_on_air_contents_nothing">現在放送中のコンテンツがありません</string>
     <string name="contents_detail_out_house_player_error_msg">視聴いただくには、「リモート視聴設定」が必要です。\n設定＞リモート視聴設定　を行ってください。</string>
+    <string name="contents_detail_pairing_button">ペアリングする</string>
 
     <!-- チャンネルリストタイトル -->
     <string name="channel_list_activity_title">チャンネルリスト</string>
