https://agile.apccloud.jp/jira/browse/DREM-2494
[実装]([DREM-3-6]録画一覧(リモートブラウジング))タブとDLボタン表示（宅外・宅内・宅外＋LRしてない）

Change-Id: I18e6a40c8ebf7ceeecee9400a8d0d36ef1f31589

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -152,6 +152,9 @@
         <item>すべて</item>
         <item>ダウンロード済み</item>
     </string-array>
+    <string-array name="record_list_tab_name_only_dl">
+        <item>ダウンロード済み</item>
+    </string-array>
     <string name="record_download_percent_mark">%</string>
     <string name="record_download_error_message">ダウンロードに失敗しました</string>
     <string name="record_download_delete_title">削除しますか？</string>
